# sandbox

./: .gitignore  README.md
advent-of-code/2024/: template.zig
borrow-playground/: Cargo.toml
borrow-playground/src/: main.rs  mutable_env.rs
capture-the-ether/: README.md  truffle-config.js
closure-implement-interface/: main.go
dereference-copy/: main.go
graphql-exploration-ts/: .gitignore
interface-copy/: main.go
language-features-go/: .gitignore  README.md
make-bytes-bench/: main_test.go
mlc-ai-course/: hello.py  pyproject.toml
multiple-embedded-struct/: main.go
package-go/: go.go
persistent-data-structures-java/: .gitignore  README.md
playing-with-modal/: arith.modal  lisp.modal  modal.c
programming-languages/toy-virtual-machine/: Cargo.toml  LICENSE  README.md
programming-languages/toy-virtual-machine/src/: core.rs  instruction.rs  logger.rs  main.rs  stack.rs
raw-input/: main.go
regexp-testing/: main.go
simple-type-conversion/: main_test.go
source-within-program/: main.go
string-to-rune-array/: main_test.go
termbox/: main.go
time-demo/: main.go
yanundand/: main.go
zig-stuff/: 002-primitives.zig  003-arrays.zig  004-pointers.zig  005-slices.zig  006-if-else.zig  007-switch.zig  008-while.zig  009-for.zig  010-structs.zig  011-enums.zig  012-unions.zig  013-functions.zig  014-optionals.zig  015-error.zig  016-gpa.zig  017-defer.zig  018-gpa-leak.zig  019-gpa-free.zig  020-fba.zig  021-arraylist.zig  022-arraylist-unmanaged.zig  023-c-import.zig  025-sum.zig  026-precompute.zig  027-generics.zig  028-generics-len.zig
(+171 files in other folders)
