[package]
name = "kato"
version = "0.1.0"
authors = ["Ravern Koh <ravernkoh@gmail.com>"]

[dependencies]
byteorder = "1"
enum-primitive-derive = "0.1.2"
failure = "0.1.2"
fern = "0.5.6"
log = "0.4"
num-traits = "0.2"

[dependencies.clap]
version = "~2.32"
default-features = false
features = ["suggestions", "vec_map"]